--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,8 +1,14 @@
-.video__iframe {
+li.video__iframe {
  margin-right: 20px;
 }
 
-.video__iframe:last-of-type {
+li.video__iframe:last-of-type {
   margin-right: 0;
+ }
+
+iframe.video__iframe {
+  width: 515px;
+  height: 316px;
+  border: 0;
  }
 
